--- a/src/vs/workbench/browser/parts/editor/media/editorstatus.css
+++ b/src/vs/workbench/browser/parts/editor/media/editorstatus.css
@@ -7,6 +7,7 @@
 	margin-left: 5px;
 }
 
+.monaco-workbench .editor-statusbar-item > .editor-status-metadata,
 .monaco-workbench .editor-statusbar-item > .editor-status-mode,
 .monaco-workbench .editor-statusbar-item > .editor-status-encoding,
 .monaco-workbench .editor-statusbar-item > .editor-status-eol,
